Switching the notification address for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
 notifications:
   email:
     recipients:
-      - andy@mitre.org
+      - healthcare-ci@googlegroups.com
     on_failure: change
