Adding a model to represent documents for a patient

--- a/test/fixtures/patients.yml
+++ b/test/fixtures/patients.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  first_name: MyString
-  last_name: MyString
+  first_name: Joe
+  last_name: Smith
   date_of_birth: 2012-03-30
-  gender: MyString
+  gender: M
 
 two:
-  first_name: MyString
-  last_name: MyString
+  first_name: Jane
+  last_name: Doe
   date_of_birth: 2012-03-30
-  gender: MyString
+  gender: F
