Now responding appropriately when requesting things that users aren't supposed to see.

--- a/test/fixtures/authorized_users.yml
+++ b/test/fixtures/authorized_users.yml
@@ -2,12 +2,16 @@
 
 one:
   email: andy@mitre.org
-  patient: one
+  patient: joe
 
 two:
   email: andy@mitre.org
-  patient: two
+  patient: jane
 
 three:
   email: steve@mitre.org
-  patient: two
+  patient: jane
+
+four:
+  email: steve@mitre.org
+  patient: bobby
